[package]
name = "reliability-tester"
version = "0.1.0"
authors = ["dop3ch3f"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.2" }

[dependencies]
env_logger = "0.6"
failure = "0.1"
log = "0.4"
reqwest = { version = "0.11.2", features = ["blocking","json"] }
tokio = { version = "1", features = ["full"] }
clap = "2.33.3"
crossbeam = "0.7.3"
crossbeam-utils = "0.7"
static_assertions = "1.1.0"
termcolor = "1.1.2"
serde = "1.0.124"
serde_json = "1.0.64"
serde_derive = "1.0.124"
actix-web = "3.3.2"
tauri = { version = "1.0.0-beta.4", features = ["api-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
