[package]
name = "reliability-tester"
version = "0.1.0"
authors = ["dop3ch3f"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
failure = "0.1"
log = "0.4"
reqwest = { version = "0.11.2", features = ["blocking","json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.2", features = ["derive"] }
crossbeam = "0.8.2"
crossbeam-utils = "0.8.16"
static_assertions = "1.1.0"
termcolor = "1.1.2"
serde = "1.0.124"
serde_json = "1.0.64"
serde_derive = "1.0.124"
actix-web = "4"
yew = { version = "0.20.0", features = ["csr"] }

[dependencies.gtk]
version = "0.7.2"
package = "gtk4"

